--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "kernel-alloc"
 version = "0.1.0"
+description = "Minimalistic Windows Kernel Allocator"
 authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
 edition = "2018"
 readme = "README.md"
