--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kernel-alloc"
-version = "0.1.1"
+version = "0.1.2"
 description = "Minimalistic Windows Kernel Allocator"
 authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
 edition = "2021"
@@ -9,3 +9,7 @@ repository = "https://github.com/not-matthias/kernel-alloc-rs"
 license-file = "LICENSE"
 
 [dependencies]
+
+[features]
+default = []
+pool-tag = []
