--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,7 +29,7 @@ jobs:
       # continue-on-error: true
       with:
         command: fmt
-        args: --target x86_64-pc-windows-gnu -Zbuild-std --all -- --check
+        args: --all -- --check
 
     - name: Run cargo clippy
       uses: actions-rs/cargo@v1
