--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         profile: minimal
         toolchain: nightly
+        target: x86_64-pc-windows-gnu
         override: true
         components: rustfmt, clippy
 
