--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ winapi = { version = "0.3.9", default-features = false, features = ["ntdef"] }
 [features]
 default = []
 pool-tag = []
+no-exec = []
